23/3/2020:
	Added basic structure of the cell class.
	The cell class is secion of a pipe which can receive a pressure wave and send it on.
23/3/2020:
	Removed the cell class.
	The moddel of splitting the n pipes into m cells where m >> n would be a less efficiant algorithm than calculating times.
23/3/2020:
	Imported the code from project 1
23/3/2020:
	Got pynode to run proerly and imported the pipes.csv file
23/3/2020:
	Added functionality for the user to place breaks and sensors.
23/3/2020:
	Added a new parameter to pynode::Edge.traverse which is how long the traverse will take.
	I belive this value is in miliseconds but I am not sure
2/5/2020:
	Disabled the ability to select the clear node
2/5/2020:
	Imported ADTs library from https://github.com/Joseph-Davies/vce-algroithmics-adts
3/5/2020:
	Added comments to the code where they were needed because it was rather complicated