@@ -19,3 +19,7 @@
 	Imported ADTs library from https://github.com/Joseph-Davies/vce-algroithmics-adts
 3/5/2020:
 	Added comments to the code where they were needed because it was rather complicated
+3/5/2020:
+	Added proper evaluation of CLI flags
+	Started propogating wave
+	Fixed new edges created around new node not having required attributes
